[package]
name = "reng"
version = "0.1.0"
edition = "2021"
authors = ["Caio <ferrandis.ca@gmail.com>"]
description = "A simple OpenGL engine with physics, UI, complex model handling and much more!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CaioFerrandis/RENG"
homepage = "https://github.com/CaioFerrandis/RENG"
documentation = "https://docs.rs/reng"

[dependencies]
assimp = "0.3.1"
gl = "0.14.0"
glam = "0.29.0"
glfw = "0.58.0"
image = "0.25.2"
rand = "0.8.5"
rapier3d = "0.22.0"
imgui = "0.12.0"
